debug: debugging security config -2-